--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: #FFFEF8
 }
 ol, ul {
 	list-style: none;
@@ -137,6 +138,30 @@ li:hover {
 	width: 100%;
 
 }
+/*rajout boutons de filtres*/
+.listfiltres{
+	display: flex;
+	justify-content: center;
+	height: 37px;
+	gap: 19px;
+	
+}
+
+.filtres{
+	height: 2.3125rem;
+	padding: 0 20px 0 20px;
+    border-radius: 60px;
+    border: 1px solid #1D6154;
+	color: #1D6154;
+	text-align: center;
+	font-family: Syne;
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+		}
+
+
 #contact {
 	width: 50%;
 margin: auto;
