--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -95,6 +95,10 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
+nav a{
+	text-decoration: none;
+	color: black;
+}
 
 li:hover {
 	color: #B1663C;
@@ -211,3 +215,29 @@ footer nav ul {
 	margin: 2em
 }
 
+/*Modification page login*/
+
+#login{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap:35px;
+}
+
+#login form{
+	display: flex;
+	flex-direction: column;
+}
+
+#login input{
+	width: 379px;
+	height: 51px;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	border: none;
+	margin-bottom: 30px;
+}
+
+#login input[type="submit"]{
+width: 179px;
+height: 36px;
+}
