--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -391,3 +391,8 @@ line-height: normal;
 margin-top: 46px;
     margin-bottom: 10px;
 }
+.ajoutPhoto{display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 13px;}
