--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -245,10 +245,14 @@ footer nav ul {
 width: 179px;
 height: 36px;
 }
+.invalidEmail, .invalidPassword{
+margin-bottom: 28px;
+    color: red;
+    font-size: large
+}
 /* modification index*/
 
 .entetegallery{
-	
 	justify-content: center;
 	align-items: baseline;
 	gap: 30px;
@@ -280,7 +284,6 @@ header h1, header nav{
 .banner svg path{
 	fill: white;
 }
-
 
 /*fenetre modale*/
 
@@ -362,7 +365,7 @@ header h1, header nav{
 	font-size: 24px;
 }
 
-.back-button-container{
+.backButton{
 	position: absolute;
     font-size: 24px;
     left: 34px;
@@ -435,4 +438,71 @@ background: #E8F1F6;
 	margin-top: 1px;
 	height: 11px;
 	color: white;
+}
+
+.addPhotoButton{
+	width: 173px;
+height: 36px;
+border-radius: 50px;
+background: #CBD6DC;
+border: none;
+font-size: 14px;
+color: #306685;
+font-family: "Work Sans";
+}
+
+.textAjout{
+	color: #444;
+text-align: center;
+font-family: Work Sans;
+font-size: 10px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+transform: translateY(-5px);
+}
+
+.alert {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+/*fenetre modale Alerte*/
+
+.alert-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 50px;
+}
+
+.close-btn2 {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-btn2:hover,
+.close-btn2:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#alertText{
+   font-family: "Works Sans";
+   font-size: 20px;
 }
